engine-net-2/examples/Errors/ProcedureUnknown.grs
new graph "Rules.grg"

exec { (d:double)=pp() }

quit
